# rosetta-back

./: .env.local  .gitignore  main.py  pyproject.toml  readme.md  requirements.mac.txt  requirements.txt
app/: app_v1.py
app/config/: gemini_config.py
app/controllers/: exercise_controller.py  scraper_controller.py  train_controller.py  training_controller.py
app/models/: error_response.py  exercise_dto.py  exercise_enum.py
app/scraper/: word_scraper.py
app/scripts/: french_dataset_script.py  french_definition_script.py
app/services/: article_service.py  dataset_service.py  definition_service.py  exercice_service.py  exercise_service.py  french_article_service.py  french_dataset_service.py  french_keyword_service.py  french_train_service.py  french_wiktionairy_service.py  gemini_service.py  keyword_service.py  scraper_service.py  scrapper_service.py  train_service.py  training_service.py
app/utils/: json_utils.py  prompt_utils.py
